--- a/demo-src/index.njk
+++ b/demo-src/index.njk
@@ -23,19 +23,60 @@
 		/* Resizer demo styles */
 		.resizeasaurus {
 			margin-bottom: 1em;
+			background-color: transparent;
 		}
 
 		.source-details {
-			border: 1px solid #eee;
 			border-radius: .25rem;
-			padding: .5rem;
 			margin-bottom: 3em;
 		}
+		.source-details summary {
+			/* Note this blows away the arrow in Firefox so we need another method to show an arrow */
+			display: inline-block;
+			padding: .5rem 1rem;
+			border: 1px solid #eee;
+			color: #555;
+			font-size: 0.8125em; /* 13px /16 */
+			font-weight: 500;
+			text-transform: uppercase;
+			letter-spacing: .5px;
+		}
+		.source-details summary::-webkit-details-marker {
+			display: none;
+		}
+		.source-details summary:before {
+			display: inline-block;
+			content: "";
+			margin-right: .75em;
+			width: 0; 
+			height: 0; 
+			border-top: .4em solid transparent;
+			border-bottom: .4em solid transparent;
+			border-left: .4em solid;
+		}
+		.source-details[open] summary:before {
+			transform: rotate(90deg);
+			/*border-bottom: none;
+			border-left: .4em solid transparent;
+			border-right: .4em solid transparent;
+			border-top: .4em solid;*/
+		}
+		.source-details summary + * {
+			clear: left;
+		}
+		.source-details[open] summary {
+			border-top-right-radius: .25rem;
+			border-top-left-radius: .25rem;
+			background-color: #444;
+			color: #fff;
+			border-color: transparent;
+		}
 		.source-details pre {
-			margin: -.5rem;
-			margin-top: .5rem;
+			margin: 0;
+			padding: 1rem;
 			border-top-right-radius: 0;
 			border-top-left-radius: 0;
+			border-width: 0;
 		}
 
 		/* Code */
