--- a/docs/flex-luthor-separators.css
+++ b/docs/flex-luthor-separators.css
@@ -1,28 +1,28 @@
 /* Separators */
 @supports (clip-path: inset(0px 0px)) or (-webkit-clip-path: inset(0px 0px)) {
-  .flu-separator-v,
-  .flu-separator-h {
-    -webkit-clip-path: inset(var(--flu-margin-v, 0px) 0 0 var(--flu-margin-h, 0px));
-    clip-path: inset(var(--flu-margin-v, 0px) 0 0 var(--flu-margin-h, 0px));
+  .fg-layout-separator-v,
+  .fg-layout-separator-h {
+    -webkit-clip-path: inset(var(--fg-layout-margin-v, 0px) 0 0 var(--fg-layout-margin-h, 0px));
+    clip-path: inset(var(--fg-layout-margin-v, 0px) 0 0 var(--fg-layout-margin-h, 0px));
   }
-  .flu-separator-v > .flu-cell,
-  .flu-separator-h > .flu-cell {
+  .fg-layout-separator-v > .fg-layout-cell,
+  .fg-layout-separator-h > .fg-layout-cell {
     position: relative;
   }
-  .flu-separator-h > .flu-cell:before {
+  .fg-layout-separator-h > .fg-layout-cell:before {
     content: "";
     position: absolute;
-    left: calc(-.5 * var(--flu-margin-h, 0) - .5px);
+    left: calc(-.5 * var(--fg-layout-margin-h, 0) - .5px);
     top: 0;
     bottom: 0;
-    border-left: 1px solid var(--flu-separator-h-color, var(--flu-separator-color, rgba(162,208,239,.35)));
+    border-left: 1px solid var(--fg-layout-separator-h-color, var(--fg-layout-separator-color, rgba(162,208,239,.35)));
   }
-  .flu-separator-v > .flu-cell:after {
+  .fg-layout-separator-v > .fg-layout-cell:after {
     content: "";
     position: absolute;
     left: 0;
-    top: calc(-.5 * var(--flu-margin-v, 0) - 1px);
+    top: calc(-.5 * var(--fg-layout-margin-v, 0) - 1px);
     right: 0;
-    border-top: 1px solid var(--flu-separator-v-color, var(--flu-separator-color, rgba(162,208,239,.35)));
+    border-top: 1px solid var(--fg-layout-separator-v-color, var(--fg-layout-separator-color, rgba(162,208,239,.35)));
   }
 }
