--- a/flex-luthor-align.css
+++ b/flex-luthor-align.css
@@ -1,24 +1,24 @@
-.flu-cell-align-v-center,
-.flu-cell-align-v-end,
-.flu-cell-align-h-center,
-.flu-cell-align-h-end {
+.fg-layout-cell-align-v-center,
+.fg-layout-cell-align-v-end,
+.fg-layout-cell-align-h-center,
+.fg-layout-cell-align-h-end {
   display: flex;
 }
-.flu-cell-align-v-center {
+.fg-layout-cell-align-v-center {
   align-items: center;
 }
-.flu-cell-align-v-end {
+.fg-layout-cell-align-v-end {
   align-items: flex-end;
 }
-.flu-cell-align-h-center {
+.fg-layout-cell-align-h-center {
   justify-content: center;
 }
-.flu-cell-align-h-end {
+.fg-layout-cell-align-h-end {
   justify-content: flex-end;
 }
-.flu-cell-align-v-center > .flu,
-.flu-cell-align-v-end > .flu,
-.flu-cell-align-h-center > .flu,
-.flu-cell-align-h-end > .flu {
+.fg-layout-cell-align-v-center > .fg-layout,
+.fg-layout-cell-align-v-end > .fg-layout,
+.fg-layout-cell-align-h-center > .fg-layout,
+.fg-layout-cell-align-h-end > .fg-layout {
   flex-grow: 1;
 }
