--- a/flex-luthor.css
+++ b/flex-luthor.css
@@ -1,39 +1,39 @@
 /* Layout component code */
-.flu {
+.fg-layout {
   /* The custom properties should not inherit from parent layouts */
-  --flu-stackpoint: initial;
-  --flu-margin-h: 0px; /* This needs to have a unit for calc() below */
-  --flu-margin-v: 0px; /* This needs to have a unit for calc() below */
+  --fg-layout-stackpoint: initial;
+  --fg-layout-margin-h: 0px; /* This needs to have a unit for calc() below */
+  --fg-layout-margin-v: 0px; /* This needs to have a unit for calc() below */
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  margin-top: calc(-1 * var(--flu-margin-v, 0px));
-  margin-left: calc(-1 * var(--flu-margin-h, 0px));
+  margin-top: calc(-1 * var(--fg-layout-margin-v, 0px));
+  margin-left: calc(-1 * var(--fg-layout-margin-h, 0px));
 }
-.flu-cell {
+.fg-layout-cell {
   /* if a margin is in play, account for this in our stackpoint calculations */
   /* notably this will also work if a stackpoint is not used. */
-  --flu-margin-mod: calc( var(--flu-stackpoint, -1 * var(--flu-margin-h, 0px)) - var(--flu-stackpoint, 0px) + var(--flu-margin-h, 0px) );
-  --flu-stackpoint-calc: calc( ( var(--flu-stackpoint, 100%) - 100% + var(--flu-margin-mod, 0px) ) * 999);
+  --fg-layout-margin-mod: calc( var(--fg-layout-stackpoint, -1 * var(--fg-layout-margin-h, 0px)) - var(--fg-layout-stackpoint, 0px) + var(--fg-layout-margin-h, 0px) );
+  --fg-layout-stackpoint-calc: calc( ( var(--fg-layout-stackpoint, 100%) - 100% + var(--fg-layout-margin-mod, 0px) ) * 999);
 
   flex-grow: 1;
-  /* This will always have a value, due to CSS variable defaults set in .flu above */
-  flex-basis: var(--flu-stackpoint-calc);
+  /* This will always have a value, due to CSS variable defaults set in .fg-layout above */
+  flex-basis: var(--fg-layout-stackpoint-calc);
   margin: 0;
-  margin-top: var(--flu-margin-v, 0);
-  margin-left: var(--flu-margin-h, 0);
+  margin-top: var(--fg-layout-margin-v, 0);
+  margin-left: var(--fg-layout-margin-h, 0);
 }
-.flu-cell-wrap {
+.fg-layout-cell-wrap {
   flex-basis: auto;
 }
 
 /* Flex layout inline */
-.flu-inline > .flu-cell {
+.fg-layout-inline > .fg-layout-cell {
   flex-grow: 0;
 }
 
 /* Debug */
-.flu-debug-outline .flu-cell {
+.fg-layout-debug-outline .fg-layout-cell {
   outline: 1px dotted rgba(0,0,0,.4);
   outline-offset: -1px;
 }
